--- a/test3style.css
+++ b/test3style.css
@@ -1,7 +1,7 @@
 body {
   width: 100%;
   height: 100%;
-  background-image: url(image/island.jpg);
+  background-image: url(image/raba.png);
   background-size: cover;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -35,5 +35,8 @@ body {
 }
 
 h1 {
+  font-size: 35px;
+  /* font-weight: bold; */
   text-align: center;
+  margin-bottom: 50px;
 }
